-Fix label alignment.

--- a/public/webportal/css/src/generic.less
+++ b/public/webportal/css/src/generic.less
@@ -95,6 +95,10 @@
   a {
     color: @theme-text-link;
   }
+
+  label {
+    vertical-align: middle;
+  }
 }
 
 /* Body */
